--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,4 @@ services:
     working_dir: /app
     volumes:
       - .:/app
-    command: bash -c "npm run build"
+    command: bash -c "npm i && npm run build"
